--- a/src/TechLanches/TechLanches.Adapter.RabbitMq/TechLanches.Adapter.RabbitMq.csproj
+++ b/src/TechLanches/TechLanches.Adapter.RabbitMq/TechLanches.Adapter.RabbitMq.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
