--- a/k8s/deployments/techlanches-api-deployment.yaml
+++ b/k8s/deployments/techlanches-api-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: techlanches-api
-          image: g124soat/techlanches-api:develop # usar latest quando for pra main
+          image: g124soat/techlanches-api:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 80
@@ -24,9 +24,6 @@ spec:
             requests:
               cpu: "500m"
               memory: "500Mi"
-            # limits: 
-            #   cpu: "1"
-            #   memory: "1Gi" Removi para testar o HPA... Validar se deve ser usado no futuro.
           env:
             - name: ASPNETCORE_ENVIRONMENT
               value: "Production"
